project/force-app/main/default/objects/Opp_Submission_Report__c/Opp_Submission_Report__c.object-meta.xml
<CustomObject>
    <label>Opportunity - Submission Report</label>
    <pluralLabel>Opportunity - Submission Reports</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <displayFormat>BCC-{00000}</displayFormat>
        <label>Name</label>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>