project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>- Field cho BCC
- Read Only
- Lấy thông tin từ Cơ Hội.Khách Thuê.Tên Khách Thuê</description>
    <label>Account Name</label>
    <type>Text</type>
    <formula>""</formula>
</CustomField>