project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Actual_Capex_USD__c.field-meta.xml
<CustomField>
    <fullName>Actual_Capex_USD__c</fullName>
    <description>- Lấy thông tin từ RO của Cơ Hội</description>
    <label>Actual Capex (USD)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>