project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Actual_Capex_VND__c.field-meta.xml
<CustomField>
    <fullName>Actual_Capex_VND__c</fullName>
    <description>- Chỉ hiển thị đối với RO KPTM</description>
    <label>Actual Capex (VND)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>