project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Actual_Total_Budget_Support_Amount_US__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Budget_Support_Amount_US__c</fullName>
    <description>- Lấy thông tin từ RO của Cơ Hội</description>
    <label>Total Actual Support Amount (USD)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>