project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Actual_Total_Budget_Support_Amount_VN__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Budget_Support_Amount_VN__c</fullName>
    <description>- Chỉ hiển thị đối với RO KPTM</description>
    <label>Total Actual Support Amount (VND)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>