project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Average_Opp_Submission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Average_Opp_Submission_Amount__c</fullName>
    <description>= (Tổng Tiền Tất Cả Các Dòng/Thời Hạn (Tháng))
Help Text:  (VNĐ)</description>
    <label>Average Opp Submission Amount</label>
    <type>Currency</type>
    <formula>0</formula>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>