project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Dạng URL</description>
    <label>Brand</label>
    <type>Text</type>
    <formula>""</formula>
</CustomField>