project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Budget_Support_Norm_VND_m2__c.field-meta.xml
<CustomField>
    <fullName>Budget_Support_Norm_VND_m2__c</fullName>
    <description>- Field cho Report KPTM
- Read Only
- Lấy thông tin bên Opportunity Product</description>
    <label>Budget Support Norm (VND/m2)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>