project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Capex_Budget_VND__c.field-meta.xml
<CustomField>
    <fullName>Capex_Budget_VND__c</fullName>
    <description>- Field cho Report KPTM
- Read Only
- Lấy thông tin bên Opportunity Product</description>
    <label>Capex Budget (VND)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>