project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Capex_Sales_VND__c.field-meta.xml
<CustomField>
    <fullName>Capex_Sales_VND__c</fullName>
    <description>- Field cho Report
- Công thức = Định Mức Hỗ Trợ Thực Tế (VNĐ/m2) * Diện Tích Hỗ Trợ Capex Thực Tế (m2)</description>
    <label>Capex Sales (VND)</label>
    <type>Currency</type>
    <formula>0</formula>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>