project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>- Field cho BCC
- Read Only
- Lấy thông tin từ Cơ Hội.Thương Hiệu.Ngành Hàng Chính</description>
    <label>Main Category</label>
    <type>Text</type>
    <length>255</length>
</CustomField>