project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Construction_Fee_By_Char__c.field-meta.xml
<CustomField>
    <fullName>Construction_Fee_By_Char__c</fullName>
    <description>- Field cho BCC
- Field cho OTL</description>
    <label>Construction Fee (By Char)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>