project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Construction_Fee_USD__c.field-meta.xml
<CustomField>
    <fullName>Construction_Fee_USD__c</fullName>
    <description>- Field cho BCC</description>
    <label>Construction Fee</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>