project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Debit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Debit_Amount__c</fullName>
    <description>= (Tổng Tiền Thuê Trung Bình (VNĐ/Tháng) + Tổng Phí Dịch Vụ Trung Bình + Tổng Giá Thuê Ngoài Trời Trung Bình) * 3</description>
    <label>Debit Amount</label>
    <type>Currency</type>
    <formula>0</formula>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>