project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Debit_Amount_Sales_Input__c.field-meta.xml
<CustomField>
    <fullName>Debit_Amount_Sales_Input__c</fullName>
    <description>- Field cho BCC
Help Text: (VNĐ)
Nếu Tiền Đặt Cọc (Sales Nhập) có giá trị thì khi được phê duyệt sẽ giá trị của Tiền Đặt Cọc (Sales Nhập), Nếu không thì sử dụng field Tiền Đặt Cọc để đồng bộ về Tiền Cọc trên Cơ Hội</description>
    <label>Debit Amount (Sales Input)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>