project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Duration_Month__c.field-meta.xml
<CustomField>
    <fullName>Duration_Month__c</fullName>
    <description>- Field cho BCC
- Read Only
- Lấy thông tin từ Cơ Hội.Thời Hạn Giá (Tháng)</description>
    <label>Duration (Month)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>