project/force-app/main/default/objects/Opp_Submission_Report__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>- Field cho BCC
- Read Only
- Lấy thông tin từ Cơ Hội.Ngày Kết Thúc</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>