project/force-app/main/default/objects/Opp_Submission_Report__c/fields/GFA_Area_Floor_1_m2__c.field-meta.xml
<CustomField>
    <fullName>GFA_Area_Floor_1_m2__c</fullName>
    <description>- Field cho BCC
- Read Only
- Lấy thông tin từ Opportunity Product.Product.OutdoorArea()</description>
    <label>Outdoor Area (In Of Boundaries)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>