project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Number_Of_Support_Months__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Support_Months__c</fullName>
    <description>- Field cho Report
- Read Only
- Lấy thông tin bên Opportunity Product</description>
    <label>Number Of Support Months</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>