project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity_Opp_Submission_Report</relationshipLabel>
    <relationshipName>Opportunity_Opp_Submission_Report</relationshipName>
</CustomField>