project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>- Field cho BCC
- Read Only
- Lấy thông tin từ Cơ Hội.Thương Hiệu.Xuất Xứ Thương Hiệu</description>
    <label>Origin</label>
    <type>Text</type>
    <length>255</length>
</CustomField>