project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Outdoor_Area_Out_Of_Boundaries__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Area_Out_Of_Boundaries__c</fullName>
    <description>- Field cho BCC
- Read Only
- Lấy thông tin từ Opportunity Product.Product.OutdoorArea()</description>
    <label>Outdoor Area (Out Of Boundaries)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>