project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>- Dạng URL
- Field cho BCC
- Read Only
- Lấy thông tin từ Cơ Hội.RO.Tên RO</description>
    <label>RO Name</label>
    <type>Text</type>
    <formula>""</formula>
</CustomField>