project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Sales_Capex_Support_Area_m2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Capex_Support_Area_m2__c</fullName>
    <description>- Field cho Report</description>
    <label>Sales Capex Support Area (m2)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>