project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Sales_Support_Norm_VND_m2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Support_Norm_VND_m2__c</fullName>
    <description>- Field cho Report</description>
    <label>Sales Support Norm (VND/m2)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>