project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Sales_Support_Voucher_Amount_VND_Mont__c.field-meta.xml
<CustomField>
    <fullName>Sales_Support_Voucher_Amount_VND_Mont__c</fullName>
    <description>- Field cho Report</description>
    <label>Sales Support Voucher Amount(VND/Month)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>