project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Service_Fee_Sales_Price_USD_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_Sales_Price_USD_m2_Month__c</fullName>
    <description>- Field cho OTL
- Read Only
- Lấy thông tin bên Opportunity Product</description>
    <label>Service Fee Sales Price (USD/m2/Month)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>