project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Service_Fee_Sales_Price_VND_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_Sales_Price_VND_m2_Month__c</fullName>
    <description>- Field cho OTL
- Công thức = Đơn Giá Phí Dịch Vụ (USD/m2/Tháng)* Tỉ giá (25000)</description>
    <label>Service Fee Sales Price (VND/m2/Month)</label>
    <type>Currency</type>
    <formula>0</formula>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>