project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Sign_Board_Name__c.field-meta.xml
<CustomField>
    <fullName>Sign_Board_Name__c</fullName>
    <description>- Field cho BCC
- Cho phép nhập thông tin Tên Bảng Hiệu trên BCC</description>
    <label>Sign Board Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>