project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>- Field cho BCC
- Read Only
- Lấy thông tin từ Cơ Hội.Ngày Bắt Đầu</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>