project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Submission_Report_Number__c.field-meta.xml
<CustomField>
    <fullName>Submission_Report_Number__c</fullName>
    <label>Submission Report Number</label>
    <type>MasterDetail</type>
    <referenceTo>Submission_Report__c</referenceTo>
    <relationshipLabel>Submission_Report_Number_Opp_Submission</relationshipLabel>
    <relationshipName>Submission_Report_Number_Opp_Submission</relationshipName>
</CustomField>