project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Support_Voucher_Amount_VND_Month__c.field-meta.xml
<CustomField>
    <fullName>Support_Voucher_Amount_VND_Month__c</fullName>
    <description>- Field cho Report
- Read Only
- Lấy thông tin bên Opportunity Product</description>
    <label>Support Voucher Amount (VND/Month)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>