project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Total_Opp_Submission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Opp_Submission_Amount__c</fullName>
    <description>SUM Field Tổng Tiền Trên Dòng của BCC Line
Help Text:  (VNĐ)</description>
    <label>Total Opp Submission Amount</label>
    <type>Text</type>
    <length>255</length>
</CustomField>