project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Used_Area__c.field-meta.xml
<CustomField>
    <fullName>Used_Area__c</fullName>
    <description>- Read Only
- Lấy thông tin từ RO của Cơ Hội 
- Chỉ hiển thị đối với RO KPTM
- Help Text: m2</description>
    <label>Used Area</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>