project/force-app/main/default/objects/Opp_Submission_Report__c/fields/Voucher_Budget__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Budget__c</fullName>
    <description>- Field cho Report
- Read Only
- Lấy thông tin bên Opportunity Product</description>
    <label>Voucher Budget</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>